# typescript-rs

./: .gitignore  Cargo.toml
cmd/tsgo/: Cargo.toml  main.rs  main_test.rs
internal/api/: Cargo.toml  conn.rs  conn_test.rs  lib.rs  lib_test.rs  proto.rs  proto_test.rs  protocol.rs  protocol_msgpack.rs  protocol_msgpack_test.rs  server.rs  session.rs  transport_unix.rs  transport_unix_test.rs  transport_windows.rs
internal/ast/: Cargo.toml  checkflags.rs  checkflags_test.rs  deepclone.rs  deepclone_test.rs  flow.rs  flow_test.rs  functionflags.rs  functionflags_test.rs  ids.rs  ids_test.rs  kind_generated.rs  kind_generated_test.rs  lib.rs  lib_test.rs  modifierflags.rs  modifierflags_test.rs  nodeflags.rs  nodeflags_test.rs  positionmap.rs  positionmap_test.rs  precedence.rs  precedence_test.rs  subtreefacts.rs  subtreefacts_test.rs  symbol.rs  symbol_test.rs  symbolflags.rs  symbolflags_test.rs  tokenflags.rs  tokenflags_test.rs  utilities.rs  utilities_test.rs  visitor.rs  visitor_test.rs
internal/binder/: Cargo.toml  astquery.rs  astquery_test.rs  flow.rs  flow_test.rs  lib.rs  lib_test.rs  nameresolver.rs  nameresolver_test.rs  referenceresolver.rs  referenceresolver_test.rs  symbols.rs  symbols_test.rs
internal/checker/: Cargo.toml  lib.rs  tracer.rs  tracer_test.rs
internal/compiler/: Cargo.toml  bench_test.rs  boundary_test.rs  boundfile.rs  boundfile_test.rs  checkerpool.rs  checkerpool_test.rs  emit_baseline_test.rs  emit_host.rs  emit_host_test.rs  emitter.rs  emitter_test.rs  file_include.rs  file_include_test.rs  fileloader.rs  fileloader_test.rs  filesparser.rs  filesparser_test.rs  host.rs  host_test.rs  includeprocessor.rs  includeprocessor_test.rs  lib.rs  lib_dom_noemit_parity.sh  lib_dom_noemit_parity_test.rs  multifile.rs  multifile_test.rs  processing_diagnostic.rs  processing_diagnostic_test.rs  program.rs  program_test.rs  projectreference.rs  projectreference_test.rs  stress_test.rs  verify_options.rs  verify_options_test.rs
internal/core/: Cargo.toml  arena.rs  arena_test.rs  bfs.rs  bfs_test.rs  binarysearch.rs  binarysearch_test.rs  buildoptions.rs  compileroptions.rs  compileroptions_test.rs  context.rs  context_test.rs  languagevariant.rs  languagevariant_test.rs  lib.rs  lib_test.rs  linkstore.rs  linkstore_test.rs  nodemodules.rs  nodemodules_test.rs  parsedoptions.rs  pattern.rs  pattern_test.rs  projectreference.rs  projectreference_test.rs  scriptkind.rs  scriptkind_test.rs  semaphore.rs  semaphore_test.rs  stack.rs  stack_test.rs  text.rs  text_test.rs  textchange.rs  textchange_test.rs  tristate.rs  tristate_test.rs  typeacquisition.rs  typeacquisition_test.rs  version.rs  (+5 more)
internal/diagnosticwriter/: Cargo.toml  lib.rs  lib_test.rs
internal/execute/: Cargo.toml  lib.rs  lib_test.rs  sys.rs  sys_test.rs  watch.rs  watch_test.rs
internal/format/: Cargo.toml  api.rs  api_test.rs  context.rs  context_test.rs  format_code_settings.rs  format_code_settings_test.rs  indent.rs  indent_test.rs  lib.rs  rule.rs  rule_test.rs  rulecontext.rs  rulecontext_test.rs  rules.rs  rules_test.rs  rulesmap.rs  rulesmap_test.rs  scanner.rs  scanner_test.rs  span.rs  span_test.rs  util.rs  util_test.rs
internal/fourslash/: Cargo.toml  driver.rs  driver_test.rs  lib.rs  test_parser.rs  test_parser_test.rs
internal/ls/: Cargo.toml  autoinsert.rs  autoinsert_test.rs  callhierarchy.rs  codeactions.rs  completions.rs  completions_test.rs  definition.rs  definition_test.rs  diagnostics.rs  diagnostics_test.rs  documenthighlights.rs  documenthighlights_test.rs  findallreferences_types.rs  folding.rs  folding_test.rs  host.rs  hover.rs  hover_test.rs  inlay_hints.rs  inlay_hints_test.rs  languageservice.rs  languageservice_test.rs  lib.rs  linkedediting.rs  linkedediting_test.rs  organizeimports.rs  references.rs  references_test.rs  rename.rs  rename_test.rs  selectionranges.rs  selectionranges_test.rs  semantictokens.rs  semantictokens_test.rs  signaturehelp.rs  signaturehelp_test.rs  symbols.rs  symbols_test.rs  test_support.rs
internal/lsp/: Cargo.toml  lib.rs  lib_test.rs  logger.rs  logger_test.rs  progress.rs  progress_test.rs  project_session.rs  project_session_test.rs  server.rs  server_test.rs  stack_sanitizer.rs  stack_sanitizer_test.rs
internal/module/: Cargo.toml  cache.rs  cache_test.rs  entrypoints.rs  entrypoints_test.rs  file_load.rs  file_load_test.rs  lib.rs  lib_test.rs  node_modules.rs  node_modules_test.rs  node_resolution.rs  node_resolution_test.rs  package_info.rs  package_info_test.rs  paths.rs  paths_test.rs  state.rs  state_test.rs  test_support.rs  type_ref.rs  type_ref_test.rs  types.rs  types_test.rs  util.rs  util_test.rs
internal/modulespecifiers/: Cargo.toml  compare.rs  compare_test.rs  lib.rs  lib_test.rs  preferences.rs  preferences_test.rs  test_support.rs  types.rs  types_test.rs  util.rs  util_test.rs
internal/packagejson/: Cargo.toml  cache.rs  cache_test.rs  expected.rs  expected_test.rs  exportsorimports.rs  exportsorimports_test.rs  jsonvalue.rs  jsonvalue_test.rs  lib.rs  lib_test.rs  validated.rs  validated_test.rs
internal/parser/: Cargo.toml  deepclone_test.rs  lib.rs  lib_test.rs  references.rs  references_test.rs  types.rs  types_test.rs  utilities.rs  utilities_test.rs
internal/printer/: Cargo.toml  emit_declarations.rs  emit_declarations_test.rs  emit_expressions.rs  emit_expressions_test.rs  emit_jsx.rs  emit_jsx_test.rs  emit_statements.rs  emit_statements_test.rs  emit_types.rs  emit_types_test.rs  emitcontext.rs  emitcontext_test.rs  emitflags.rs  emitflags_test.rs  emithelpers.rs  emithelpers_test.rs  emittextwriter.rs  emittextwriter_test.rs  factory.rs  factory_test.rs  generatedidentifierflags.rs  generatedidentifierflags_test.rs  lib.rs  list_format.rs  list_format_test.rs  literal_text.rs  literal_text_test.rs  namegenerator.rs  namegenerator_test.rs  parenthesizer.rs  parenthesizer_test.rs  printer.rs  printer_test.rs  sourcemap_test.rs  test_support.rs  textwriter.rs  textwriter_test.rs  utilities.rs  utilities_test.rs
internal/project/: Cargo.toml  background.rs  client.rs  lib.rs  (+26 more)
(+877 files in other folders)
