[workspace]
resolver = "2"
members = [
    "internal/stringutil",
    "internal/json",
    "internal/debug",
    "internal/tspath",
    "internal/collections",
    "internal/core",
    "internal/jsnum",
    "internal/semver",
    "internal/glob",
    "internal/locale",
    "internal/pprof",
    "internal/repo",
    "internal/jsonrpc",
    "internal/vfs",
    "internal/bundled",
    "internal/diagnostics",
    "internal/ast",
    "internal/scanner",
    "internal/evaluator",
    "internal/nodebuilder",
    "internal/pseudochecker",
    "internal/outputpaths",
    "internal/packagejson",
    "internal/parser",
    "internal/astnav",
    "internal/binder",
    "internal/sourcemap",
    "internal/tracing",
    "internal/diagnosticwriter",
    "internal/module",
    "internal/lsp/lsproto",
    "internal/project/dirty",
    "internal/project/logging",
    "internal/symlinks",
    "internal/tsoptions",
    "internal/modulespecifiers",
    "internal/printer",
    "internal/checker",
    "internal/transformers",
]
