[workspace]
resolver = "2"
members = [
    "internal/stringutil",
    "internal/json",
    "internal/debug",
    "internal/tspath",
    "internal/collections",
    "internal/core",
    "internal/jsnum",
    "internal/semver",
    "internal/glob",
    "internal/locale",
    "internal/pprof",
    "internal/repo",
    "internal/jsonrpc",
    "internal/vfs",
    "internal/bundled",
    "internal/diagnostics",
    "internal/ast",
    "internal/scanner",
    "internal/evaluator",
    "internal/nodebuilder",
    "internal/pseudochecker",
    "internal/outputpaths",
    "internal/packagejson",
    "internal/parser",
    "internal/astnav",
    "internal/binder",
    "internal/sourcemap",
    "internal/tracing",
    "internal/diagnosticwriter",
    "internal/module",
    "internal/lsp",
    "internal/lsp/lsproto",
    "internal/ls/lsconv",
    "internal/ls/lsutil",
    "internal/ls/change",
    "internal/ls/autoimport",
    "internal/ls",
    "internal/format",
    "internal/project/dirty",
    "internal/project/logging",
    "internal/symlinks",
    "internal/tsoptions",
    "internal/modulespecifiers",
    "internal/printer",
    "internal/checker",
    "internal/transformers",
    "internal/compiler",
    "internal/project",
    "internal/api",
    "internal/execute",
    "internal/execute/incremental",
    "cmd/tsgo",
    "internal/testutil/baseline",
    "internal/testutil/harnessutil",
    "internal/testrunner",
    "internal/fourslash",
    "internal/testutil/stringtestutil",
    "internal/testutil/race",
    "internal/testutil/parsetestutil",
    "internal/testutil/emittestutil",
    "internal/testutil/filefixture",
    "internal/testutil/fsbaselineutil",
    "internal/testutil/jstest",
    "internal/testutil/fixtures",
    "internal/testutil/tsbaseline",
    "internal/testutil/testutil",
]
