[package]
name = "tsgo_checker"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2.11.1"
rustc-hash = "2.1.2"
tsgo_ast = { path = "../ast" }
tsgo_astnav = { path = "../astnav" }
tsgo_collections = { path = "../collections" }
tsgo_core = { path = "../core" }
tsgo_debug = { path = "../debug" }
tsgo_diagnostics = { path = "../diagnostics" }
tsgo_evaluator = { path = "../evaluator" }
tsgo_jsnum = { path = "../jsnum" }
tsgo_module = { path = "../module" }
tsgo_modulespecifiers = { path = "../modulespecifiers" }
tsgo_nodebuilder = { path = "../nodebuilder" }
tsgo_printer = { path = "../printer" }
tsgo_pseudochecker = { path = "../pseudochecker" }
tsgo_scanner = { path = "../scanner" }
tsgo_stringutil = { path = "../stringutil" }
tsgo_tracing = { path = "../tracing" }
tsgo_tsoptions = { path = "../tsoptions" }
tsgo_tspath = { path = "../tspath" }

# Used only by the cfg(test) stub program (parse + bind) that drives the
# symbol-query tests; not part of the library build.
[dev-dependencies]
tsgo_binder = { path = "../binder" }
tsgo_parser = { path = "../parser" }
