[package]
name = "tsgo_core"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
crossbeam-channel = "0.5.15"
la-arena = "0.3.1"
rayon = "1.12.0"
rustc-hash = "2.1.2"
serde = "1.0.228"
tsgo_collections = { path = "../collections" }
tsgo_debug = { path = "../debug" }
tsgo_json = { path = "../json" }
tsgo_stringutil = { path = "../stringutil" }
tsgo_tspath = { path = "../tspath" }

[dev-dependencies]
serde_json = "1.0.150"
