[package]
name = "tsgo_execute"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tsgo_checker = { path = "../checker" }
tsgo_compiler = { path = "../compiler" }
tsgo_core = { path = "../core" }
tsgo_diagnostics = { path = "../diagnostics" }
tsgo_diagnosticwriter = { path = "../diagnosticwriter" }
tsgo_incremental = { path = "incremental" }
tsgo_locale = { path = "../locale" }
tsgo_outputpaths = { path = "../outputpaths" }
tsgo_parser = { path = "../parser" }
tsgo_tsoptions = { path = "../tsoptions" }
tsgo_tspath = { path = "../tspath" }
tsgo_vfs = { path = "../vfs" }
