[package]
name = "tsgo_format"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2.11.1"
tsgo_ast = { path = "../ast" }
tsgo_astnav = { path = "../astnav" }
tsgo_core = { path = "../core" }
tsgo_scanner = { path = "../scanner" }
tsgo_stringutil = { path = "../stringutil" }

[dev-dependencies]
tsgo_parser = { path = "../parser" }
