[package]
name = "tsgo_fourslash"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
indexmap = "2.12.0"
serde_json = { version = "1.0.150" }
tsgo_collections = { path = "../collections" }
tsgo_compiler = { path = "../compiler" }
tsgo_core = { path = "../core" }
tsgo_ls = { path = "../ls" }
tsgo_ls_lsconv = { path = "../ls/lsconv" }
tsgo_lsproto = { path = "../lsp/lsproto" }
tsgo_stringutil = { path = "../stringutil" }
tsgo_testrunner = { path = "../testrunner" }
tsgo_tsoptions = { path = "../tsoptions" }
tsgo_tspath = { path = "../tspath" }
tsgo_vfs = { path = "../vfs" }
