[package]
name = "tsgo_ls"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tsgo_ast = { path = "../ast" }
tsgo_astnav = { path = "../astnav" }
tsgo_checker = { path = "../checker" }
tsgo_compiler = { path = "../compiler" }
tsgo_core = { path = "../core" }
tsgo_diagnostics = { path = "../diagnostics" }
tsgo_locale = { path = "../locale" }
tsgo_lsproto = { path = "../lsp/lsproto" }
tsgo_ls_lsconv = { path = "lsconv" }
tsgo_parser = { path = "../parser" }
tsgo_tspath = { path = "../tspath" }

[dev-dependencies]
tsgo_tsoptions = { path = "../tsoptions" }
tsgo_vfs = { path = "../vfs" }
