[package]
name = "tsgo_lsp"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tsgo_core = { path = "../core" }
tsgo_jsonrpc = { path = "../jsonrpc" }
tsgo_lsproto = { path = "lsproto" }
tsgo_tspath = { path = "../tspath" }

[dev-dependencies]
