[package]
name = "tsgo_module"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2.11.1"
rustc-hash = "2.1.2"
tsgo_ast = { path = "../ast" }
tsgo_collections = { path = "../collections" }
tsgo_core = { path = "../core" }
tsgo_diagnostics = { path = "../diagnostics" }
tsgo_packagejson = { path = "../packagejson" }
tsgo_semver = { path = "../semver" }
tsgo_stringutil = { path = "../stringutil" }
tsgo_tspath = { path = "../tspath" }
tsgo_vfs = { path = "../vfs" }
