[package]
name = "tsgo_testrunner"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
indexmap = "2.12.0"
regex = "1.12.3"
tsgo_core = { path = "../core" }
tsgo_diagnostics = { path = "../diagnostics" }
tsgo_diagnosticwriter = { path = "../diagnosticwriter" }
tsgo_locale = { path = "../locale" }
tsgo_scanner = { path = "../scanner" }
tsgo_testutil_baseline = { path = "../testutil/baseline" }
tsgo_testutil_harnessutil = { path = "../testutil/harnessutil" }
tsgo_tspath = { path = "../tspath" }

[dev-dependencies]
tempfile = "3.27.0"
tsgo_repo = { path = "../repo" }
